--- a/docs/api-reference/lab-testing/get-order.mdx
+++ b/docs/api-reference/lab-testing/get-order.mdx
@@ -7,10 +7,57 @@ openapi: "GET /v3/order/{order_id}"
 ```python Python
 from vital import Client
 
-client = Client(api_key, "sandbox")
+client = Client(
+  api_key=<API_KEY>,
+  environment="sandbox",
+  region="us"
+)
 
-data = client.LabTests.get_order("<order_id>")
+data = client.LabTests.get_order(order_id='<order_id>');
+```
 
+```javascript Node
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+
+const client = new VitalClient({
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
+});
+
+const data = await client.labTests.getOrder("<order_id>");
+```
+
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+
+Vital vital = Vital.builder()
+        .apiKey("YOUR_API_KEY")
+        .environment(Environment.SANDBOX)
+        .build();
+
+var data = vital.labTests().getOrder("<order_id>");
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+
+response, err := client.LabTests.GetOrders(context.TODO(), "<order_id>")
+if err != nil {
+  return err
+}
+fmt.Printf("Received data %s\n", response)
 ```
 
 </RequestExample>
