--- a/docs/api-reference/lab-testing/requisition-pdf.mdx
+++ b/docs/api-reference/lab-testing/requisition-pdf.mdx
@@ -13,5 +13,62 @@ curl --request GET \
      --output file.pdf
 ```
 
+```python Python
+from vital import Client
+
+client = Client(
+  api_key=<API_KEY>,
+  environment="sandbox",
+  region="us"
+)
+
+data = client.LabTests.get_order_requisition_pdf(order_id='<order_id>');
+```
+
+```javascript Node
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+
+const client = new VitalClient({
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
+});
+
+const data = await client.labTests.getOrderRequistionPdf("<order_id>");
+```
+
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+
+Vital vital = Vital.builder()
+        .apiKey("YOUR_API_KEY")
+        .environment(Environment.SANDBOX)
+        .build();
+
+var data = vital.labTests().getOrderRequistionPdf("<order_id>");
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+
+response, err := client.LabTests.GetOrderRequistionPdf(context.TODO(), "<order_id>")
+if err != nil {
+  return err
+}
+fmt.Printf("Received data %s\n", response)
+```
+
+
 </RequestExample>
 
