--- a/docs/api-reference/lab-testing-at-home-phlebotomy/appointment-availability.mdx
+++ b/docs/api-reference/lab-testing-at-home-phlebotomy/appointment-availability.mdx
@@ -21,45 +21,95 @@ curl --request POST \
 ```
 
 ```python Python
-from vital import Client
+from vital.client import Vital
+from vital.environment import VitalEnvironment
+from vital.types.us_address import UsAddress
 
-client = Client(
-  api_key=<API_KEY>,
-  environment="sandbox",
-  region="us"
+
+client = Vital(
+  api_key="YOUR_API_KEY",
+  environment=VitalEnvironment.SANDBOX
 )
 
-data = client.AtHomePhlebotomy.appointment_availability(
-    order_id="413d7205-f8a9-42ed-aa4a-edb99e481ca0",
-    address={
-        "first_line": "256 West Lincoln Street",
-        "second_line": "14",
-        "city": "Phoenix",
-        "state": "AZ",
-        "zip_code": "85004",
-    },
+request = UsAddress(
+    first_line="123 Main St",
+    second_line="",
+    city="San Francisco",
+    state="CA",
+    zip_code="94111",
+    unit="",
 )
+
+
+data = client.lab_tests.get_phlebotomy_appointment_availability(request=request)
 ```
 
 ```javascript Node
-const { VitalClient } = require("Vital");
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+import { UsAddress } from '@tryvital/vital-node/api';
 
 const client = new VitalClient({
-  api_key: <API_KEY>,
-  environment: "sandbox",
-  region: "us"
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
 });
 
-const data = await client.AtHomePhlebotomy.appointmentAvailability(
-    "413d7205-f8a9-42ed-aa4a-edb99e481ca0",
-    {
-        "first_line": "256 West Lincoln Street",
-        "second_line": "14",
-        "city": "Phoenix",
-        "state": "AZ",
-        "zip_code": "85004",
-    }
-);
+const request: UsAddress = {
+    firstLine: "123 Main St",
+    city: "San Francisco",
+    state: "CA",
+    zipCode: "94105",
+}
+
+const data = await client.labTests.getPhlebotomyAppointmentAvailability(request);
+```
+
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+import com.vital.api.types.UsAddress;
+
+Vital vital = Vital.builder()
+        .apiKey("YOUR_API_KEY")
+        .environment(Environment.SANDBOX)
+        .build();
+
+UsAddress request = UsAddress
+    .builder()
+    .firstLine("<first_line")
+    .city("<city>")
+    .state("<state>")
+    .zipCode("<zip_code>")
+    .build();
+
+var data = vital.labTests().getPhlebotomyAppointmentAvailability(request);
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+
+request := &vital.UsAddress{
+    FirstLine: "123 Main St",
+    City:      "New York",
+    State:     "NY",
+    ZipCode:   "10001",
+}
+
+response, err := client.LabTests.GetPhlebotomyAppointmentAvailability(context.TODO(), request)
+if err != nil {
+    return err
+}
+fmt.Printf("Received data %s\n", response)
 ```
 
 </RequestExample>
