--- a/docs/api-reference/lab-testing-at-home-phlebotomy/appointment-cancelling.mdx
+++ b/docs/api-reference/lab-testing-at-home-phlebotomy/appointment-cancelling.mdx
@@ -16,33 +16,74 @@ curl --request PATCH \
 ```
 
 ```python Python
-from vital import Client
+from vital.client import Vital
+from vital.environment import VitalEnvironment
 
-client = Client(
-  api_key=<API_KEY>,
-  environment="sandbox",
-  region="us"
+client = Vital(
+  api_key="YOUR_API_KEY",
+  environment=VitalEnvironment.SANDBOX
 )
 
-data = client.AtHomePhlebotomy.cancel_appointment(
-    order_id="413d7205-f8a9-42ed-aa4a-edb99e481ca0",
-    cancellation_reason_id="7dfd7da5-ed6e-40bb-a7e4-c8003f0c10a9",
-)
+data = client.lab_tests.get_phlebotomy_appointment_cancellation_reason();
 ```
 
 ```javascript Node
-const { VitalClient } = require("Vital");
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+import {  AppointmentCancelRequest } from '@tryvital/vital-node/api';
 
 const client = new VitalClient({
-  api_key: <API_KEY>,
-  environment: "sandbox",
-  region: "us"
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
 });
 
-const data = await client.AtHomePhlebotomy.cancelAppointment(
-    "413d7205-f8a9-42ed-aa4a-edb99e481ca0",
-    "7dfd7da5-ed6e-40bb-a7e4-c8003f0c10a9",
-);
+const request: AppointmentCancelRequest = {
+    cancellationReasonId: "<reason_id>",
+}
+
+const data = await client.labTests.cancelPhlabotomyAppointment("<order_id>", request);
+```
+
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+import com.vital.api.resources.labtests.requests.AppointmentCancelRequest;
+
+Vital vital = Vital.builder()
+        .apiKey("YOUR_API_KEY")
+        .environment(Environment.SANDBOX)
+        .build();
+
+AppointmentCancelRequest request = AppointmentCancelRequest
+        .builder()
+        .cancellationReasonId("<reason_id")
+        .build();
+
+var data = vital.labTests().cancelPhlabotomyAppointment("<order_id>", request);
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+
+request := &vital.AppointmentCancelRequest{
+    CancellationReasonId: "<cancellation_reason_id>",
+}
+
+response, err := client.LabTests.CancelPhlabotomyAppointment(context.TODO(), "<order_id>", request)
+if err != nil {
+    return err
+}
+fmt.Printf("Received data %s\n", response)
 ```
 
 </RequestExample>
