--- a/docs/api-reference/lab-testing/post-test.mdx
+++ b/docs/api-reference/lab-testing/post-test.mdx
@@ -6,19 +6,102 @@ openapi: "POST /v3/lab_tests"
 <RequestExample>
 
 ```python Python
-from vital import Client
+from vital.client import Vital
+from vital.environment import VitalEnvironment
+from vital.types.lab_test_collection_method import LabTestCollectionMethod
+from vital.types.lab_test_sample_type import LabTestSampleType
+from vital.types.us_address import UsAddress
 
-client = Client(api_key, "sandbox")
 
-data = client.LabTests.create_test(
-  name="Lipids Panel",
-  description="Cholesterol test",
-  lab_id=5,
-  method="testkit",
-  sample_type="dried_blood_spot",
-  markers=[160]
+client = Vital(
+  api_key="YOUR_API_KEY",
+  environment=VitalEnvironment.SANDBOX
 )
 
+data = client.lab_tests.create(
+    marker_ids=[160], 
+    lab_id=123, 
+    name="<name>", 
+    method=LabTestCollectionMethod.TESTKIT, 
+    sample_type=LabTestSampleType.DRIED_BLOOD_SPOT, 
+    description="<description>"
+)
+```
+
+```javascript Node
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+import {  CreateLabTestRequest, LabTestCollectionMethod, LabTestSampleType } from '@tryvital/vital-node/api';
+
+const client = new VitalClient({
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
+});
+
+const request: CreateLabTestRequest = {
+    markerIds: [160],
+    labId: 123,
+    name: '<name>',
+    method: LabTestCollectionMethod.Testkit,
+    sampleType: LabTestSampleType.DriedBloodSpot,
+    description: '<description>',
+}
+
+const data = await client.labTests.create(request);
+```
+
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+import com.vital.api.resources.labtests.requests.CreateLabTestRequest;
+import com.vital.api.types.LabTestCollectionMethod;
+import com.vital.api.types.LabTestSampleType;
+
+Vital vital = Vital.builder()
+        .apiKey("YOUR_API_KEY")
+        .environment(Environment.SANDBOX)
+        .build();
+
+CreateLabTestRequest request = CreateLabTestRequest
+        .builder()
+        .labId(123)
+        .name("<name>")
+        .method(LabTestCollectionMethod.TESTKIT)
+        .sampleType(LabTestSampleType.DRIED_BLOOD_SPOT)
+        .description("<description")
+        .markerIds(List.of(160))
+        .build();
+
+var data = vital.labTests().create(request);
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+
+request := &vital.CreateLabTestRequest{
+  MarkerIds:   []int{160},
+  LabId:       123,
+  Name:        "<name>",
+  Method:      vital.LabTestCollectionMethodTestkit,
+  SampleType:  vital.LabTestSampleTypeDriedBloodSpot,
+  Description: "<description>",
+}
+
+response, err := client.LabTests.Create(context.TODO(), request)
+if err != nil {
+  return err
+}
+fmt.Printf("Received data %s\n", response)
 ```
 
 </RequestExample>
