--- a/docs/wearables/guides/freestyle.mdx
+++ b/docs/wearables/guides/freestyle.mdx
@@ -36,7 +36,7 @@ To connect your user to Vital via the Widget you can follow the guide [here](/we
 
 When integrating with Vital, you have two options: use Vital's practice, or yours. We call the latter a custom practise.
 
-### Custom Cractice
+### Custom Practice
 
 <Warning>
   If you want to use a custom practice, you need an Enterprise Account. Please
@@ -45,14 +45,14 @@ When integrating with Vital, you have two options: use Vital's practice, or your
 
 Freestyle Libre is available in different regions, ensure you invite the correct email as an admin of your practice:
 
-### Vital US Region
+Vital US Region
 
 | Freestyle Region                               | Sandbox Email                  | Production Emai;       |
 | ---------------------------------------------- | ------------------------------ | ---------------------- |
 | United States (`us`) \*                        | support+sandbox+us@tryvital.io | support+us@tryvital.io |
 | _(\*) Default Freestyle region if unspecified_ |
 
-### Vital EU Region
+Vital EU Region
 
 | Freestyle Region                               | Sandbox Email                  | Production Email            |
 | ---------------------------------------------- | ------------------------------ | --------------------------- |
