--- a/docs/api-reference/lab-testing-insurance/search-payor.mdx
+++ b/docs/api-reference/lab-testing-insurance/search-payor.mdx
@@ -17,6 +17,77 @@ curl --request POST \
 '
 ```
 
+```python Python
+from vital.client import Vital
+from vital.environment import VitalEnvironment
+
+client = Vital(
+  api_key="YOUR_API_KEY",
+  environment=VitalEnvironment.SANDBOX
+)
+
+data = client.insurance.search_payor_info(insurance_name="<insurance_name>")
+```
+
+```javascript Node
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+import { PayorSearchRequest } from '@tryvital/vital-node/api';
+
+const client = new VitalClient({
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
+});
+
+const request: PayorSearchRequest = {
+    insuranceName: "<insurance_name>"
+}
+
+const data = await client.insurance.searchPayorInfo(request)
+```
+
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+import com.vital.api.resources.insurance.requests.PayorSearchRequest;
+
+Vital vital = Vital.builder()
+        .apiKey("YOUR_API_KEY")
+        .environment(Environment.SANDBOX)
+        .build();
+
+PayorSearchRequest request = PayorSearchRequest
+        .builder()
+        .insuranceName("<insurance_name>")
+        .build();
+
+var data = vital.insurance().searchPayorInfo(request);
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+
+request := &vital.PayorSearchRequest{
+    InsuranceName: "<insurance_name>",
+}
+
+response, err := client.Insurance.SearchPayorInfo(context.TODO(), request)
+if err != nil {
+    return err
+}
+fmt.Printf("Received data %s\n", response)
+```
+
 </RequestExample>
 
 <ResponseExample>
