--- a/docs/wearables/guides/freestyle.mdx
+++ b/docs/wearables/guides/freestyle.mdx
@@ -32,9 +32,9 @@ To connect your user to Vital via the Widget you can follow the guide [here](/we
 
 <img src="/img/libre_connect.png" className="w-2/5 block mx-auto" />
 
-## Adding users to a practices
+## Adding users to a Practice
 
-When integrating with Vital, you have two options: use Vital's practice, or yours. We call the latter a custom practise.
+When integrating with Vital, you have two options: use Vital's practice, or yours. We call the latter a custom practice.
 
 ### Custom Practice
 
