--- a/docs/wearables/guides/freestyle.mdx
+++ b/docs/wearables/guides/freestyle.mdx
@@ -2,14 +2,6 @@
 title: "Freestyle Libre"
 ---
 
-<Info>
-
-Please make sure you invite Vital to your practice as a clinician with admin rights. To connect a user to Vital you must first connect your Freestyle practice to Vital in the appropriate Vital region for your Freestyle account (See [here](#vital-freestyle-supported-regions) for a breakdown or vital regions and supported Freestyle regions).
-
-If you get stuck at any point, help is just a click away! Join our Slack channel or send us a message to support@tryvital.io
-
-</Info>
-
 <Warning>
 
 Libre's API does not record the timestamp's offset associated with a user's reading.
@@ -43,16 +35,23 @@ When integrating with Vital, you have two options: use Vital's practice, or your
   contact support@tryvital.io.
 </Warning>
 
+<Info>
+Please make sure you invite Vital to your practice as a clinician with admin rights. To connect a user to Vital you must first connect your Freestyle practice to Vital in the appropriate Vital region for your Freestyle account.
+
+If you get stuck at any point, help is just a click away! Join our Slack channel or send us a message to support@tryvital.io
+
+</Info>
+
 Freestyle Libre is available in different regions, ensure you invite the correct email as an admin of your practice:
 
-Vital US Region
+**Vital US Region**
 
 | Freestyle Region                               | Sandbox Email                  | Production Emai;       |
 | ---------------------------------------------- | ------------------------------ | ---------------------- |
 | United States (`us`) \*                        | support+sandbox+us@tryvital.io | support+us@tryvital.io |
 | _(\*) Default Freestyle region if unspecified_ |
 
-Vital EU Region
+**Vital EU Region**
 
 | Freestyle Region                               | Sandbox Email                  | Production Email            |
 | ---------------------------------------------- | ------------------------------ | --------------------------- |
