--- a/docs/wearables/guides/freestyle.mdx
+++ b/docs/wearables/guides/freestyle.mdx
@@ -10,23 +10,13 @@ of each user and adjust the timestamps accordingly.
 
 </Warning>
 
-Once your Freestyle practice is connected to the Vital practice, you need to instruct your user's to connect their Libre account to your practice.
+## Adding users to a Practice
+
+When integrating with Vital, you have two options: use Vital's practice, or yours. We call the latter a custom practice. Depending on the approach, you need to instruct your user's to connect their Libre account to a practice.
+
 This allows Vital to start pulling data from their account. This can be through the Libre app.
 
 <img src="/img/connect_libreview.png" className="w-2/5 block mx-auto" />
-
-Once your user has connected their Libre account, you can connect your user to Vital
-either via the **widget** or the **API**.
-
-## Vital Widget
-
-To connect your user to Vital via the Widget you can follow the guide [here](/wearables/connecting-providers/launching_link).
-
-<img src="/img/libre_connect.png" className="w-2/5 block mx-auto" />
-
-## Adding users to a Practice
-
-When integrating with Vital, you have two options: use Vital's practice, or yours. We call the latter a custom practice.
 
 ### Custom Practice
 
@@ -49,6 +39,7 @@ Freestyle Libre is available in different regions, ensure you invite the correct
 | Freestyle Region                               | Sandbox Email                  | Production Emai;       |
 | ---------------------------------------------- | ------------------------------ | ---------------------- |
 | United States (`us`) \*                        | support+sandbox+us@tryvital.io | support+us@tryvital.io |
+| Canada (`ca`)                                  | support+sandbox+ca@tryvital.io | support+ca@tryvital.io |
 | _(\*) Default Freestyle region if unspecified_ |
 
 **Vital EU Region**
@@ -61,7 +52,6 @@ Freestyle Libre is available in different regions, ensure you invite the correct
 | Germany (`de`)                                 | support+de+sandbox@tryvital.io | support+de@tryvital.io      |
 | Netherlands (`nl`)                             | support+nl+sandbox@tryvital.io | support+nl@tryvital.io      |
 | Brazil (`br`)                                  | support+br+sandbox@tryvital.io | support+br@tryvital.io      |
-| Canada (`ca`)                                  | support+sandbox+ca@tryvital.io | support+ca@tryvital.io      |
 | _(\*) Default Freestyle region if unspecified_ |
 
 ### Vital Practices
@@ -76,6 +66,12 @@ Vital has two practices (depending on environment) this applies to all regions:
 | ----------- | ---------------- |
 | Sandbox     | tryVital-sandbox |
 | Production  | tryVital         |
+
+## Vital Widget
+
+To connect your user to Vital via the Widget you can follow the guide [here](/wearables/connecting-providers/launching_link).
+
+<img src="/img/libre_connect.png" className="w-2/5 block mx-auto" />
 
 ## Vital Link
 
