Make it more clear

--- a/docs/wearables/guides/freestyle.mdx
+++ b/docs/wearables/guides/freestyle.mdx
@@ -14,11 +14,11 @@ of each user and adjust the timestamps accordingly.
 
 When integrating with Vital, you have two options: use Vital's practice, or yours. We call the latter a custom practice. Depending on the approach, you need to instruct your user's to connect their Libre account to a practice.
 
-This allows Vital to start pulling data from their account. This can be through the Libre app.
+This allows Vital to start pulling data from their account. This is done through the Libre app:
 
 <img src="/img/connect_libreview.png" className="w-2/5 block mx-auto" />
 
-### Custom Practice
+### Custom Practice (Available to Enterprise subscriptions Only)
 
 <Warning>
   If you want to use a custom practice, you need an Enterprise Account. Please
@@ -54,7 +54,7 @@ Freestyle Libre is available in different regions, ensure you invite the correct
 | Brazil (`br`)                                  | support+br+sandbox@tryvital.io | support+br@tryvital.io      |
 | _(\*) Default Freestyle region if unspecified_ |
 
-### Vital Practices
+### Vital Practices (Available to all Subscriptions)
 
 <Info>
   You can use a Vital practices to test the integration with Freestyle Libre.
@@ -66,6 +66,8 @@ Vital has two practices (depending on environment) this applies to all regions:
 | ----------- | ---------------- |
 | Sandbox     | tryVital-sandbox |
 | Production  | tryVital         |
+
+You need to ask your user to add one of the above practices in their Libre App. Once that's done, data will start flowing.
 
 ## Vital Widget
 
