--- a/docs/wearables/guides/freestyle.mdx
+++ b/docs/wearables/guides/freestyle.mdx
@@ -18,17 +18,17 @@ This allows Vital to start pulling data from their account. This is done through
 
 <img src="/img/connect_libreview.png" className="w-2/5 block mx-auto" />
 
-### Custom Practice (Available to Enterprise subscriptions Only)
+### Custom Practice (Enterprise only)
 
 <Warning>
-  If you want to use a custom practice, you need an Enterprise Account. Please
+  If you want to use a Custom Practice, you need an Enterprise Account. Please
   contact support@tryvital.io.
 </Warning>
 
 <Info>
 Please make sure you invite Vital to your practice as a clinician with admin rights. To connect a user to Vital you must first connect your Freestyle practice to Vital in the appropriate Vital region for your Freestyle account.
 
-If you get stuck at any point, help is just a click away! Join our Slack channel or send us a message to support@tryvital.io
+If you get stuck at any point join our Slack channel or send us a message to support@tryvital.io
 
 </Info>
 
@@ -54,10 +54,11 @@ Freestyle Libre is available in different regions, ensure you invite the correct
 | Brazil (`br`)                                  | support+br+sandbox@tryvital.io | support+br@tryvital.io      |
 | _(\*) Default Freestyle region if unspecified_ |
 
-### Vital Practices (Available to all Subscriptions)
+### Vital Practices
 
 <Info>
   You can use a Vital practices to test the integration with Freestyle Libre.
+  This modality is available to all subscriptions.
 </Info>
 
 Vital has two practices (depending on environment) this applies to all regions:
